# kaggle

./: .gitignore  LICENSE  pyproject.toml
data/digits/: sample_submission.csv
kaggle/: metrics.py
kaggle/digits/: dataset.py  digits.py  models.py  notebook.py
