[tool.poetry]
name = "kaggle"
version = "0.1.0"
description = "My kaggle competitions"
authors = ["Inaki Ortiz de Landaluce <inaki.ortizdelandaluce@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
pandas = "^2.2.0"
scikit-learn = "^1.4.0"
torch = "^2.2.0"
torchvision = "^0.17.0"
tqdm = "^4.66.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
